# quine

./: Main.hs  Triangles.hs  quine.cabal
src/Quine/: Cubemap.hs  Image.hs  MipmapChain.hs  Monitor.hs  StateVar.hs
src/Quine/GL/: Attribute.hs  Buffer.hs  Framebuffer.hs  InternalFormat.hs  Pixel.hs  Sampler.hs  Texture.hs  Uniform.hs
src/Quine/Geometry/: Box.hs
tests/: buffers.hs  textures.hs
