name:          quine
category:      Graphics
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/quine/
bug-reports:   http://github.com/ekmett/quine/issues
copyright:     Copyright (C) 2014 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.8.3
synopsis:      Quine
description:   Quine

extra-source-files:
  .gitignore
  .vim.custom
  CHANGELOG.markdown
  README.markdown

data-files:
  shaders/*.vert
  shaders/*.geom
  shaders/*.frag
  shaders/*.h

source-repository head
  type: git
  location: git://github.com/ekmett/quine.git

flag exe
  default: True
  manual: True

flag triangles
  default: True
  manual: True

flag embed
  default: False
  manual: True

flag test-buffers
  default: True
  manual: True

flag test-framebuffers
  default: True
  manual: True

flag test-shaders
  default: True
  manual: True

flag test-textures
  default: True
  manual: True

flag toy
  default: True
  manual: True

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  include-dirs: shaders
  exposed-modules:
    Quine.Cubemap
    Quine.Debug
    Quine.Env
    Quine.Exception
    Quine.Geometry.Beam
    Quine.Geometry.Box
    Quine.Geometry.Frustum
    Quine.Geometry.Normal
    Quine.Geometry.Plane
    Quine.Geometry.Position
    Quine.Geometry.Ray
    Quine.Geometry.Sphere
    Quine.GL
    Quine.GL.Attribute
    Quine.GL.Block
    Quine.GL.Buffer
    Quine.GL.Draw
    Quine.GL.Error
    Quine.GL.Framebuffer
    Quine.GL.InternalFormat
    Quine.GL.Object
    Quine.GL.Pixel
    Quine.GL.Program
    Quine.GL.ProgramPipeline
    Quine.GL.Renderbuffer
    Quine.GL.Sampler
    Quine.GL.Shader
    Quine.GL.Texture
    Quine.GL.Types
    Quine.GL.Uniform
    Quine.GL.Version
    Quine.GL.VertexArray
    Quine.Image
    Quine.Instances
    Quine.Math
    Quine.MipmapChain
    Quine.Monitor
    Quine.Options
    Quine.Queue
    Quine.Ref
    Quine.StateVar
    Quine.Supply
    Quine.Task

  other-modules:
    Paths_quine

  build-depends:
    adjunctions,
    aeson,
    base >= 4.7 && < 5,
    bytestring,
    comonad >= 4.2.2,
    concurrent-supply,
    containers,
    contravariant >= 1.2,
    data-default,
    directory,
    distributive,
    ekg,
    ekg-core >= 0.1.0.3,
    file-embed,
    filepath,
    fingertree,
    gl >= 0.7.2.2,
    half,
    JuicyPixels,
    lens,
    linear >= 1.15.4,
    monad-control >= 0.3.3,
    mtl,
    optparse-applicative,
    primitive,
    process >= 1.2,
    semigroups >= 0.9,
    stm >= 2.4.2,
    text,
    transformers,
    utf8-string,
    vector,
    void
